# emotion-readar

./: .dockerignore  .gitignore  .pre-commit-config.yaml  34.md  AGENTS.md  CLAUDE.md  CODEREVIEW.md  PLAN.md  README.md  SPECIFICATION.md  architecture.html  compose.yml  docker-compose.yml
.claude/: settings.json
.github/: copilot-instructions.md  pull_request_template.md  pull_request_templete.md
Mitou/: Assembly-CSharp.csproj  Mitou.sln
api/: Dockerfile
docs/: QUEST3_E2E_TEST.md  api.md  class-diagram.html  claude-skills.md  claude_skills.md  copilot-skills.md  memo.md  servier.image.md  zu.html
server/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  main.py  pyproject.toml
server/app/: __init__.py  main.py
server/app/api/: auth.py  dependencies.py
server/app/api/routers/: chat.py  features.py  health.py  realtime.py  sessions.py
server/app/core/: __init__.py  config.py  exceptions.py  lifespan.py
server/app/core/interfaces/: agent.py  ai_client.py  conversation_repo.py  db_repo.py  session_repo.py
server/app/core/prompts/: love_coach.py
server/app/dto/: __init__.py  audio.py  conversation.py  emotion.py  feature.py  health.py  llm.py  processing.py  request.py  response.py  session.py
server/app/infra/: firebase.py  firestore_client.py  gcp_auth.py  secret_manager.py
server/app/infra/repositories/: dynamo_repo.py  firestore_conversation_repo.py  firestore_session_repo.py  in_memory_session_repo.py
server/app/middleware/: cors.py  logging.py
server/app/models/: feature_log.py  session.py
server/app/services/: chat_orchestrator.py  connection_manager.py  conversation_service.py  emotion_interpreter.py  feature_service.py  health_service.py  llm_service.py  rate_limiter.py  response_generator.py  session_service.py  stt_service.py
server/app/services/agents/: client.py  core.py  core_agent.py  interfaces.py  love_coach.py  prompts.py  schemas.py
server/app/utils/: audio.py  time.py
server/data/: test_request.json
server/scripts/: setup_dynamodb.py  test_firestore_connection.py  test_ftmodel.py  test_websocket.py
server/tests/: conftest.py
server/tests/api/: test_rate_limit.py  test_realtime.py
server/tests/dto/: dto.test.py  test_dto.py
server/tests/infra/: test_gcp_auth.py  test_secret_manager.py
server/tests/middleware/: test_cors.py
server/tests/services/: __init__.py  test_conversation_service.py  test_emotion_interpreter.py  test_rate_limiter.py  test_response_generator.py  test_stt_service.py
server/tests/unit/: test_auth.py  test_firebase.py  test_health.py  test_llm_service.py
tuning/: ConvtGeminiDataset.py  make_test_data.py  prompt_v2.txt  train_split.jsonl  training_data_gemini_formatted.jsonl  tuning.py  (+4 more)
(+229 files in other folders)
